--- a/Index.html
+++ b/Index.html
@@ -14,18 +14,18 @@
 		<nav
 			class="nav">			
 				<li>
-					<img src="AgregarProducto.jfif"
+					<img src="images/AgregarProducto.jfif"
 					class="FotosMenu">					
 					<a href="#">Agregar Producto</a>										
 				</li>	
 				<li>
-					<img src="editar.png"
+					<img src="images/editar.png"
 					class="FotosMenu">
 					<a href="#">Editar Producto </a>
 				</li>
 
 				<li>
-					<img src="AgregarMesa.png"
+					<img src="images/agregarMesa.png"
 					class="FotosMenu">
 					<a href="#">Agregar Mesa</a>
 				</li>
@@ -36,7 +36,7 @@
 		<div class="botones">
 				<button class="boton" type="button">AGREGAR PRODUCTO</button>
 				<button class="boton" type="button">EDITAR PRODUCTO</button>
-				<button        id="agregarmesa" class="boton" type="button">AGREGAR MESA</button>
+				<button id="agregarmesa" class="boton" type="button">AGREGAR MESA</button>
 					
 		</div>
 	</header>
@@ -46,7 +46,7 @@
 		<article  class='article' >	
 			<h1 class="titulomesa">
 			Mesa 1 </h1>	
-			<img class="libre" src="Libre.png">
+			<img class="libre" src="images/libre.png">
 			<p>				
 			</p>
 			<div class="probando">
