no edite cais nada }

--- a/Index.html
+++ b/Index.html
@@ -53,11 +53,11 @@
 	<div id="openModal" class="modalDialog">
 		<div>
 			<a href="#close" title="Close" class="close">X</a>
-			<form method="GET">
-			<p>Nombre: <input type="text" name="nombre" required></p>
-			<p>Valor: <input type="text" name="Valor" required></p>
+			<form method="GET" id='Formulario'> 
+			<p>Nombre: <input type="text" name="nombre" id='Nombre'required></p>
+			<p>Valor: <input type="text" id='Valor' name="Valor" required></p>
 			<p>
-				<input type="submit" value="Enviar">
+				<input type="submit" id="Enviar" value="Enviar">
 				<input type="reset" value="Borrar">
 			  </p>
 			</form>
