--- a/Index.html
+++ b/Index.html
@@ -51,13 +51,13 @@
 	<script src="code.js"></script>
 
 	<div id="openModal" class="modalDialog">
-		<div id="aux">
+		<div>
 			<a href="#close" title="Close" class="close">X</a>
 			<form method="GET" id='Formulario'> 
 			<p>Producto: <input type="text" name="nombre" id='Producto'required></p>
 			<p>Valor: <input type="text" id='Valor' name="Valor" required></p>
 			<p>
-				<input type="submit" href="#close" id="Enviar" value="Enviar">
+				<input type="submit" id="Enviar" value="Enviar">
 				<input type="reset" value="Borrar">
 			  </p>
 			</form>
