al abrir de vuelta la mesa falla

--- a/Index.html
+++ b/Index.html
@@ -80,6 +80,18 @@
 	</div>
 
 
+	<div id="openModal3" class="modalDialog">
+		<div>
+			<a href="#close" title="Close" class="close">X</a>
+			<form method="GET" id='Formulario'> 
+			<p>Producto: <input type="text" name="nombre" id='Producto3'required>
+			<input type="submit" id="Enviar3" value="Enviar">
+		
+			  </p>
+			</form>
+		</div>
+	</div>
+
 
 
 	<script src="code.js"></script>
