--- a/Index.html
+++ b/Index.html
@@ -53,14 +53,12 @@
 	<div id="openModal" class="modalDialog">
 		<div>
 			<a href="#close" title="Close" class="close">X</a>
-			<form method="GET" id='Formulario'> 
 			<p>Producto: <input type="text" name="nombre" id='Producto'required></p>
 			<p>Valor: <input type="text" id='Valor' name="Valor" required></p>
 			<p>
 				<input type="submit" id="Enviar" value="Enviar">
 				<input type="reset" value="Borrar">
 			  </p>
-			</form>
 		</div>
 	</div>
 
@@ -83,12 +81,9 @@
 	<div id="openModal3" class="modalDialog">
 		<div>
 			<a href="#close" title="Close" class="close">X</a>
-			<form method="GET" id='Formulario'> 
-			<p>Producto: <input type="text" name="nombre" id='Producto3'required>
-			<input type="submit" id="Enviar3" value="Enviar">
-		
-			  </p>
-			</form>
+			<p>Producto: <input type="text" name="nombre" id="Producto3" required>
+				<input type="submit" id="Enviar3" value="Guardar">
+			</p>
 		</div>
 	</div>
 
